# darkdev

./: .gitignore  Cargo.toml  README.md  watch-config.toml
java-project/: pom.xml
java-project/src/main/java/dev/surly/: HelloWorld.java  Person.java
java-project/src/test/java/dev/surly/: PersonTest.java
project-a/: pom.xml
project-a/src/main/java/dev/surly/a/: HelloWorld.java
project-b/: pom.xml
project-b/src/main/java/dev/surly/b/: Person.java
project-b/src/test/java/dev/surly/b/: PersonTest.java
src/: main.rs
