[package]
name = "darkdev"
version = "0.1.0"
edition = "2021"

[dependencies]
notify = "6.1.1"
notify-debouncer-full = "0.3.1"
tokio = { version = "1.39.3", features = ["full"] }
toml = "0.8.19"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
pretty_env_logger = "0.5.0"
log = "0.4"